fixed the links to documentation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Custom functions and wrappers for Tkinter and TKK python GUI modules.</p>
 
         <p class="view"><a href="https://github.com/TDHolmes/TkinterWrappers">View the Project on GitHub <small>TDHolmes/TkinterWrappers</small></a></p>
-        <p class="view"><a href="https://github.com/TDHolmes/TkinterWrappers/SphinxDocumentation/index.html">View the Project Documentation</a></p>
+        <p class="view"><a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">View the Project Documentation</a></p>
 
 
         <ul>
@@ -33,7 +33,7 @@
 <a id="tkinterwrappers" class="anchor" href="#tkinterwrappers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>TkinterWrappers</h1>
 
 <p>Custom functions and wrappers for Tkinter and TKK python GUI modules.</p>
-<p>API documentation is located <a href="https://github.com/TDHolmes/TkinterWrappers/SphinxDocumentation/index.html">here</a>.</p>
+<p>API documentation is located <a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">here</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/TDHolmes">TDHolmes</a></p>
