--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       <header>
         <h1>Tkinterwrappers</h1>
         <p>Custom functions and wrappers for Tkinter and TKK python GUI modules.</p>
+        <p>Used in the following projects:</p>
+        <ul>
+            <li>https://github.com/TDHolmes/BinaryClock</li>
+        </ul>
+
+        <p>Examples of its usage can be found in the API documentation <a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">here</a>.</p>
+
 
         <p class="view"><a href="https://github.com/TDHolmes/TkinterWrappers">View the Project on GitHub <small>TDHolmes/TkinterWrappers</small></a></p>
         <p class="view"><a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">View the Project Documentation</a></p>
