--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 <p>Custom functions and wrappers for Tkinter and TKK python GUI modules.</p>
 <p>Used in the following projects:</p>
 <ul>
-    <li>https://github.com/TDHolmes/BinaryClock</li>
+    <li><a href="https://github.com/TDHolmes/BinaryClock">Binary Clock GUI</a></li>
 </ul>
 
 <p>Examples of its usage can be found in the API documentation <a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">here</a>.</p>
-<p>API documentation is located <a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">here</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/TDHolmes">TDHolmes</a></p>
