Added an image as an example

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <ul>
     <li><a href="https://github.com/TDHolmes/BinaryClock">Binary Clock GUI</a></li>
 </ul>
-
+<p>Below is the Binary Clock GUI which were built using these wrappers.</p>
+<p><img src="https://raw.githubusercontent.com/TDHolmes/BinaryClock/master/documents/pictures/BinaryClockGUI.png" alt="alt text" title="Binary Clock GUI v1.0"></p>
 <p>Examples of its usage can be found in the API documentation <a href="https://tdholmes.github.io/TkinterWrappers/SphinxDocumentation/index.html">here</a>.</p>
       </section>
       <footer>
